更新日期顯示 + 性別顯示

--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -110,7 +110,7 @@
                         <table>
                             </select> </td>
                             <td>
-                                <div id="msex" style="color: #ffffff;"><%=item.m_sex %></div><p>性別：<br/>
+                                <div id="msex" style="color: #ffffff;" hidden><%=item.m_sex %></div><p>性別：<br/>
                                     <select class="sex" name="m_sex"></select>
                                 </p>
                             </td>
