--- a/views/allbrand.ejs
+++ b/views/allbrand.ejs
@@ -97,7 +97,7 @@
 
 					<div class="contentGroup">
 						<div class="content content1">
-							<table class="order-table">
+							<table class="order-table1">
 								<thead>
 									<tr>
 										<th width="75%">品牌名稱</th>
@@ -106,9 +106,9 @@
 										<th width="5%"></th>
 										<th width="5%"></th>
 									</tr>							
-										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
+										<input type="search" class="light-table-filter"  data-table="order-table1" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
 								</thead>
-								<tbody>
+								<tbody width="100%">
 									<% for(var i=0; i<items.length; i++) {%>
 										<tr>
 											<td width="75%" style="word-break: break-all;display: table-cell; vertical-align:middle ;">
@@ -140,7 +140,7 @@
 							<span>兔兔不哭: <a href="https://www.922.org.tw/response/">https://www.922.org.tw/response/</a></span>
 						</div>
 						<div class="content content2">
-							<table class="order-table">
+							<table class="order-table2">
 								<thead>
 									<tr>
 										<th width="75%">品牌名稱</th>
@@ -149,7 +149,7 @@
 										<th width="5%"></th>
 										<th width="5%"></th>
 									</tr>							
-										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
+										<input type="search" class="light-table-filter"  data-table="order-table2" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
@@ -183,7 +183,7 @@
 							<span>LEAPING BUNNY CERTIFICATION: <a href="https://www.leapingbunny.org/shopping-guide">https://www.leapingbunny.org/shopping-guide</a></span></br>
 						</div>
 						<div class="content content3">
-							<table class="order-table">
+							<table class="order-table3">
 								<thead>
 									<tr>
 										<th width="75%">品牌名稱</th>
@@ -192,7 +192,7 @@
 										<th width="5%"></th>
 										<th width="5%"></th>
 									</tr>							
-										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
+										<input type="search" class="light-table-filter"  data-table="order-table3" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
@@ -226,7 +226,7 @@
 							<span>PETA: <a href="https://crueltyfree.peta.org/companies-dont-test/">https://crueltyfree.peta.org/companies-dont-test/</a></span></br>
 						</div>
 						<div class="content content4">
-							<table class="order-table">
+							<table class="order-table4">
 								<thead>
 									<tr>
 										<th width="75%">品牌名稱</th>
@@ -235,7 +235,7 @@
 										<th width="5%"></th>
 										<th width="5%"></th>
 									</tr>							
-										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
+										<input type="search" class="light-table-filter"  data-table="order-table4" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
