--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
       <div class="col-lg py-5">
         <h4>動物友善店家</h4>
         <p class="text-light">邦妮幫你精選品牌</p>
-        <a class="btn btn-outline-light" href="brand" role="button">查看名單</a>
+        <a class="btn btn-outline-light" href="allbrand" role="button">查看名單</a>
       </div>
 
     </div>
