--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3231,8 +3231,8 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/colorPINK.jpg");
+			background-color: #FFAFB8;
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, #FFAFB8, #FFAFB8), url("../../images/colorPINK.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
