--- a/views/recognitionAns.ejs
+++ b/views/recognitionAns.ejs
@@ -73,16 +73,48 @@
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div style="text-align:center">
         <div style="margin-bottom: 80px;">
-            <% if (item.peta == true) { %>
+            <% if ((item.peta == true )&&(item.leapingbunny == true)&&(item.nmcb == true)) { %>
               <h2 class="profile-title">辨識結果為：</h2>
               <h3 class="profile-title"><%= item.b_name %></h3>
               <br>
               <h2 class="profile-title">認證標章為：</h2>
-              <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM</h3>
+              <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM、LEAPING BUNNY CERTIFICATION、兔兔不哭</h3>
               <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
               <div class="searchbrand">
-              <a href="peta"><img src="images/pic04.jpg" style="width:40%;height:40%" alt="" /></a>
+                <a href="peta"><img src="images/pic04.jpg" alt="" /></a>
+                <a href="leapingbunny"><img src="images/pic02.jpg" alt="" /></a>
+                <a href="nmcb"><img src="images/pic05.jpg" alt="" /></a>
               </div>
+              <br>
+              <span class="date">名單更新日期：<%= item.updatetime %></span>
+              <br><br>
+              <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
+            <%} else if (item.peta == true) { %>
+              <h2 class="profile-title">辨識結果為：</h2>
+              <h3 class="profile-title"><%= item.b_name %></h3>
+              <br>
+              <h2 class="profile-title">認證標章為：</h2>
+              <% if (item.leapingbunny == true) { %>
+                <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM、LEAPING BUNNY CERTIFICATION</h3>
+                <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+                <div class="searchbrand">
+                  <a href="peta"><img src="images/pic04.jpg" style="width:40%;height:40%" alt="" /></a>
+                  <a href="leapingbunny"><img src="images/pic02.jpg" style="width:40%;height:40%" alt="" /></a>
+                </div>
+              <% } else if (item.nmcb == true) { %>
+                <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM、兔兔不哭</h3>
+                <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+                <div class="searchbrand">
+                  <a href="peta"><img src="images/pic04.jpg" style="width:40%;height:40%" alt="" /></a>
+                  <a href="nmcb"><img src="images/pic05.jpg" style="width:40%;height:40%" alt="" /></a>
+                </div>
+              <% } else { %>
+                <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM</h3>
+                <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+                <div class="searchbrand">
+                  <a href="peta"><img src="images/pic04.jpg" style="width:40%;height:40%" alt="" /></a>
+                </div>
+              <% } %>
               <br>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
               <br><br>
@@ -92,11 +124,20 @@
               <h3 class="profile-title"><%= item.b_name %></h3>
               <br>
               <h2 class="profile-title">認證標章為：</h2>
-              <h3 class="profile-description">LEAPING BUNNY CERTIFICATION</h3>
-              <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
-              <div class="searchbrand">
-              <a href="leapingbunny"><img src="images/pic02.jpg" style="width:40%;height:40%" alt="" /></a>
-              </div>
+              <% if (item.nmcb == true) { %>
+                <h3 class="profile-description">LEAPING BUNNY CERTIFICATION、兔兔不哭</h3>
+                <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+                <div class="searchbrand">
+                  <a href="leapingbunny"><img src="images/pic02.jpg" style="width:40%;height:40%" alt="" /></a>
+                  <a href="nmcb"><img src="images/pic05.jpg" style="width:40%;height:40%" alt="" /></a>
+                </div>
+              <% } else { %>
+                <h3 class="profile-description">LEAPING BUNNY CERTIFICATION</h3>
+                <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+                <div class="searchbrand">
+                  <a href="leapingbunny"><img src="images/pic02.jpg" style="width:40%;height:40%" alt="" /></a>
+                </div>
+              <% } %>
               <br>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
               <br><br>
@@ -109,10 +150,23 @@
               <h3 class="profile-description">兔兔不哭</h3>
               <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
               <div class="searchbrand">
-              <a href="nmcb"><img src="images/pic05.jpg" style="width:40%;height:40%" alt="" /></a>
+                <a href="nmcb"><img src="images/pic05.jpg" style="width:40%;height:40%" alt="" /></a>
               </div>
               <br>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
+              <br><br>
+              <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
+            <% } else if (item == -1) { %>
+              <h2 class="profile-title">辨識結果為：</h2>
+              <h3 class="profile-title"><%= selectName %></h3>
+              <br>
+              <h3 class="profile-description">該品牌「沒有」無動物實驗認證標章</h3>
+              <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+              <div class="searchbrand">
+                <a href="peta"><img src="images/pic04.jpg" alt="" /></a>
+                <a href="leapingbunny"><img src="images/pic02.jpg" alt="" /></a>
+                <a href="nmcb"><img src="images/pic05.jpg" alt="" /></a>
+              </div>
               <br><br>
               <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
             <% } else { %>
@@ -121,10 +175,10 @@
               <br><br>
               <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
               <div class="searchbrand">
-              <a href="peta"><img src="images/pic04.jpg" alt="" /></a>
-              <a href="leapingbunny"><img src="images/pic02.jpg" alt="" /></a>
-              <a href="nmcb"><img src="images/pic05.jpg" alt="" /></a>
-            </div>
+                <a href="peta"><img src="images/pic04.jpg" alt="" /></a>
+                <a href="leapingbunny"><img src="images/pic02.jpg" alt="" /></a>
+                <a href="nmcb"><img src="images/pic05.jpg" alt="" /></a>
+              </div>
             <% } %>
         </div>
       </div>
