--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -149,7 +149,7 @@
                             option.appendChild(str)
                           </script>
 
-                        <p><input type="submit" value="送出登記資料"></p>
+                        <p><input type="submit" value="修改會員資料"></p>
                     </form>
                     <script>
                         function readURL(input) {
