--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,9 @@
       <div class="col-lg-6 text-center">
         <!----<h1>邦妮幫你Bunny</h1>---->
         <br><br><br><br>
-        <p>牠，也有感受。</p>
+        <H3>生命沒有不同，牠也有感受。</H3>
+       <!---- <h5>我們是Bunny幫你，致力於推動為實驗動物的平等生存權利。</h5>---->
+        <a>#STOP ANIMAL TESTING</a>
         <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
       </div>
     </div>
