--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,7 +18,7 @@ body {
 
 #banner {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
-        url(../images/bg.jpg);
+        url(../images/bg-color.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
