--- a/views/fileSizeError.ejs
+++ b/views/fileSizeError.ejs
@@ -37,7 +37,7 @@
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                <!----<h1>邦妮幫你Bunny</h1>---->
-			    <h2>圖片過大，不可超過1M(1024*1024)</h2>
+			    <h2>圖片過大，不可超過3M(3*1024*1024)</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
             </div>
         </div>
