--- a/views/recognitionCheck.ejs
+++ b/views/recognitionCheck.ejs
@@ -51,6 +51,9 @@
   <br>
 
   <body>
+    <div id="preloader">
+      <div id="status"><img src="img/loading1.gif"/></div>
+    </div>
     <header class="container">
       <img
         src="images/upload.jpg"
@@ -151,5 +154,10 @@
       Copyrights © 2022 All Rights Reserved by Bunny幫你
     </footer>-->
     <script src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+    <script>$(window).load(function() { // 確認整個頁面讀取完畢再將這三個div隱藏起來
+      $("#status").delay(5000).fadeOut(3000); //delay --> 延遲幾秒才fadeOut
+      $("#preloader").delay(7000).fadeOut(3000);
+    })</script>
   </body>
 </html>
