--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -83,7 +83,7 @@ shrink-to-fit=no" />
           <p>地址:</p>
           <p><input type="text" name="a_address" required value=<%=item.a_address %> ></p>
 
-          <p>備註事項: </p>
+          <p>備註事項: <a href="donate" target="_blank">查看動物清單</a></p>
           <p><textarea rows="5" cols="20" type="text" name="a_remark"><%= item.a_remark %></textarea></p>
 
           <div id="exp" hidden><%=item.a_experience %></div><p>有無動物飼養經驗?
