--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
       <div class="col-lg py-5">
         <h4>實驗動物認養</h4>
         <p class="text-light">領養代替購買!</p>
-        <a class="btn btn-outline-light" href="detail" role="button">我要領養</a>
+        <a class="btn btn-outline-light" href="product" role="button">我要領養</a>
       </div>
       <div class="col-lg py-5">
         <h4>訊息公告</h4>
