--- a/views/allbrand.ejs
+++ b/views/allbrand.ejs
@@ -91,7 +91,7 @@
 					<div class="tabPanel">
 						<label for="tab1" class="tab tab1">ALL</label>
 						<label for="tab2" class="tab tab2">LEAPING BUNNY CERTIFICATION</label>
-						<label for="tab3" class="tab tab3">Beauty Without Bunny</label>
+						<label for="tab3" class="tab tab3">PETA</label>
 						<label for="tab4" class="tab tab4">兔兔不哭</label>
 					</div>
 
